--- a/wp_audio_trigger/config.yaml
+++ b/wp_audio_trigger/config.yaml
@@ -10,7 +10,7 @@ map:
   - media:rw
 homeassistant_api: true
 hassio_api: true
-hassio_role: manager
+hassio_role: admin
 
 options:
   mqtt_host: "core-mosquitto"
