--- a/wp_audio_trigger/config.yaml
+++ b/wp_audio_trigger/config.yaml
@@ -1,7 +1,7 @@
 name: "WP Audio Trigger"
 slug: "wp_audio_trigger"
 description: "Event-Recorder: 1/3-Oktav 40–315 Hz, Trigger @80/160 Hz (A), FLAC+CSV, MQTT"
-version: "0.1.62"
+version: "0.1.63"
 arch: [aarch64, armv7, armhf, amd64]
 startup: services
 init: false
@@ -14,6 +14,10 @@ hassio_role: admin
 ingress: true
 ingress_port: 8099
 panel_icon: mdi:waveform
+ports:
+  8099/tcp: 8099
+ports_description:
+  8099/tcp: Web UI and API access
 
 options:
   mqtt_host: "core-mosquitto"
