--- a/wp_audio_trigger/config.yaml
+++ b/wp_audio_trigger/config.yaml
@@ -1,6 +1,6 @@
-name: "WP Audio Trigger"
+name: "Sound Analyzer and trigger based Recorder"
 slug: "wp_audio_trigger"
-description: "Event-Recorder: 1/3-Oktav 40–315 Hz, Trigger @80/160 Hz (A), FLAC+CSV, MQTT"
+description: "MQTT based configurable sound analyzer and event recorder"
 version: "0.1.70"
 arch: [aarch64, armv7, armhf, amd64]
 startup: services
