--- a/wp_audio_trigger/config.yaml
+++ b/wp_audio_trigger/config.yaml
@@ -1,7 +1,7 @@
 name: "Sound Analyzer and trigger based Recorder"
 slug: "wp_audio_trigger"
 description: "MQTT based configurable sound analyzer and event recorder"
-version: "0.1.95"
+version: "0.1.96"
 url: "https://github.com/granmeloco/ha-audio-analyzer-add-on"
 arch: [aarch64, armv7, armhf, amd64]
 startup: services
@@ -9,9 +9,9 @@ init: false
 audio: true
 map:
   - media:rw
-homeassistant_api: true
-hassio_api: true
-hassio_role: admin
+# homeassistant_api: true
+# hassio_api: true
+# hassio_role: admin
 ingress: true
 ingress_port: 8099
 panel_icon: mdi:waveform
