--- a/wp_audio_trigger/config.yaml
+++ b/wp_audio_trigger/config.yaml
@@ -1,7 +1,7 @@
 name: "Sound Analyzer and trigger based Recorder"
 slug: "wp_audio_trigger"
 description: "MQTT based configurable sound analyzer and event recorder"
-version: "1.89.1"
+version: "1.89.2"
 url: "https://github.com/granmeloco/ha-audio-analyzer-add-on"
 arch: [aarch64, armv7, armhf, amd64]
 startup: services
@@ -34,7 +34,7 @@ options:
   pulse_volume: 100
 
   # List of selected sensors to record
-  selected_sensors: []
+  # (no default value)
 
 schema:
   mqtt_host: str
